grammar.js
    program: $ => repeat($._top_level),

    _top_level: $ => choice(
      $.data_step,
      $.proc_sql_step,
      $.proc_step,
      $.macro_definition,
      $.macro_if_statement,
      $.macro_do_statement,
      $.macro_variable_assignment,
      $.include_statement,
      $.libname_statement,
      $.options_statement,
      $.macro_call_statement,
      $.line_comment,
      $.generic_statement,
    ),

    // ── Comments ───────────────────────────────────────────────────────────

    // /* ... */ — an extra so it is transparently skipped between any two tokens
    block_comment: $ => token(seq(
      "/*",
      /[^*]*\*+([^/*][^*]*\*+)*/,
      "/",
    )),

    // %* text ; — SAS macro language comment; an extra like block_comment
    percent_comment: $ => token(seq("%*", /[^;]*/, ";")),

    // * text ; — single token so the lexer beats generic_statement on `*`
    line_comment: $ => token(seq("*", /[^;]*/, ";")),

    // ── DATA step ──────────────────────────────────────────────────────────

    data_step: $ => seq(
      $.data_step_header,
      repeat($._data_body_statement),
      $.run_statement,
    ),

    data_step_header: $ => seq(
      kw("DATA"),
      optional($._dataset_list),
      ";",
    ),

    _dataset_list: $ => seq(
      $.dataset_name,
      repeat(seq(optional(","), $.dataset_name)),
    ),

    dataset_name: $ => choice(
      seq($._dname_part, ".", $._dname_part),
      alias(
        token(choice("_NULL_", "_null_", "_DATA_", "_data_", "_LAST_", "_last_")),
        $.identifier
      ),
      $._dname_part,
    ),

    // Dataset name part: identifier or macro ref, optionally followed by more macro refs.
    // Handles _w_&&memname&d, work.&&data&d, &&libname&d, etc.
    // &var.addCnt is handled by macro_variable_ref consuming the dot+identifier suffix.
    // prec.right: greedily consume consecutive macro_variable_refs into one part.
    _dname_part: $ => prec.right(seq(
      choice($.identifier, $.macro_variable_ref),
      repeat($.macro_variable_ref),
    )),

    // ── PROC SQL step ─────────────────────────────────────────────────────

    run_statement: $ => seq(kw("RUN"), ";"),

    _data_body_statement: $ => choice(
      $.set_statement,
      $.merge_statement,
      $.update_statement,
      $.output_statement,
      $.macro_definition,
      $.macro_if_statement,
      $.macro_do_statement,
      $.macro_variable_assignment,
      $.include_statement,
      $.macro_call_statement,
      $.line_comment,
      $.null_statement,
      $.generic_statement,
    ),

    // SET input1 input2 ... ;
    set_statement: $ => seq(
      kw("SET"),
      repeat1($._data_source),
      ";",
    ),

    // MERGE ds1 ds2 ... ;
    merge_statement: $ => seq(
      kw("MERGE"),
      repeat1($._data_source),
      ";",
    ),

    // UPDATE master_ds [transaction_ds] ;
    update_statement: $ => seq(
      kw("UPDATE"),
      repeat1($._data_source),
      ";",
    ),

    // OUTPUT [ds1 ds2 ...] ;  — zero args writes to default output dataset
    output_statement: $ => seq(
      kw("OUTPUT"),
      repeat($._data_source),
      ";",
    ),

    // Dataset reference with optional named options block.
    // Using a named ds_options node (not hidden) so any string_literal or
    // macro_variable_ref inside the options is contained within ds_options
    // and does not pollute the parent set_statement / merge_statement level.
    _data_source: $ => seq(
      $.dataset_name,
      optional($.ds_options),
    ),

    ds_options: $ => seq(
      "(",
      repeat(choice(
        $.string_literal,
        $.macro_variable_ref,
        $._paren_group,
        /[^();"'&%]+/,
      )),
      ")",
    ),

    // ── Macro definition ──────────────────────────────────────────────────

    macro_definition: $ => seq(
      $._pct_macro,
      field("name", $.macro_name),
      optional($.macro_parameters),
      optional($.macro_options),
      ";",
      repeat($._macro_body_item),
      $.macro_end,
    ),

    macro_parameters: $ => seq(
      "(",
      optional(seq(
        $._macro_param,
        repeat(seq(",", $._macro_param)),
      )),
      ")",
    ),

    _macro_param: $ => seq(
      $.identifier,
      optional(seq("=", optional($._macro_param_default))),
    ),

    _macro_body_item: $ => choice(
      $.data_step,
      $.proc_sql_step,
      $.proc_step,
      $.macro_definition,
      $.macro_if_statement,
      $.macro_do_statement,
      $.macro_variable_assignment,
      $.include_statement,
      $.macro_call_statement,
      $.macro_label,
      $.line_comment,
      $.null_statement,
      $.generic_statement,
    ),

    macro_end: $ => seq(
      $._pct_mend,
      optional($.macro_name),
      ";",
    ),

    // %if condition %then body [%else body]
    // prec.right resolves the dangling-else: inner %if claims the %else.
    macro_if_statement: $ => prec.right(seq(
      $._pct_if,
      repeat($._mc_tok_inner),
      $._pct_then,
      $._macro_body_item,
      optional(seq(
        $._pct_else,
        $._macro_body_item,
      )),
    )),

    // %do [spec] ; body %end ;
    // spec covers loop forms (%do i=1 %to &n) and condition forms (%do %while(...)).
    // Kept flat via _mc_tok_inner — no structured parsing of loop parameters needed.
    macro_do_statement: $ => seq(
      $._pct_do,
      repeat($._mc_tok_inner),
      ";",
      repeat($._macro_body_item),
      $._pct_end,
      ";",
    ),

    // / secure minoperator des='...' — option clause between params and header ;
    // Extras (/\s+/, block_comment) make multiline option lists transparent.
    macro_options: $ => seq(
      "/",
      repeat($._macro_option_token),
    ),

    _macro_option_token: $ => choice(
      seq($.identifier, "=", $.string_literal),  // des='description'
      $.identifier,                               // secure, minoperator, parmbuff, etc.
    ),

    // %label: — SAS macro goto label (no semicolon).  Disambiguated from
    // macro_call_statement via the conflicts declaration + GLR.
    macro_name: $ => $.identifier,

    // ── Macro call ────────────────────────────────────────────────────────

    // Standalone statement: %name(args);   %name;   %name content;
    // The third form handles SAS built-ins that take non-parenthesized content:
    //   %put text;   %do i = 1 %to &n;   %if cond %then stmt;   %global x y;
    // Option 3 splits into a required non-paren first token (_mc_tok) followed by
    // optional tokens that may include parenthesized groups (_mc_tok_inner).
    // This ensures option 3 never starts with "(" — eliminating the conflict with
    // option 1's macro_arguments — while still allowing n(&v) and opt=(...) later.
    // prec.right on option 1: prefer consuming the trailing ";" into this rule
    // rather than leaving it as a null_statement.
    macro_call_statement: $ => seq(
      "%",
      field("name", alias(token.immediate(/[A-Za-z_][A-Za-z0-9_]*/), $.macro_name)),
      choice(
        prec.right(seq($.macro_arguments, optional(";"))), // %name(args); or %name(args)
        ";",                                               // %name;
        seq($._mc_tok, repeat($._mc_tok_inner), ";"),      // %name content;
      ),
    ),

    // Inline call used as a value inside other constructs.
    // prec.right: when a "(" follows, prefer attaching it as macro_arguments
    // to this call rather than leaving it for the outer context.
    macro_call: $ => prec.right(seq(
      "%",
      field("name", alias(token.immediate(/[A-Za-z_][A-Za-z0-9_]*/), $.macro_name)),
      optional($.macro_arguments),
    )),

    // prec(1): when "(" immediately follows a macro name, prefer this over
    // _paren_group so %name(args) always uses macro_arguments.
    macro_arguments: $ => prec(1, seq(
      "(",
      optional(seq(
        $._macro_arg,
        repeat(seq(",", $._macro_arg)),
      )),
      ")",
    )),

    _macro_arg: $ => repeat1(choice(
      $.string_literal,
      $.numeric_literal,
      $.macro_variable_ref,
      $.macro_call,
      $._paren_group,
      /[^,();\s"'&%]+/,
    )),

    // Parenthesized group inside a macro argument — handles non-macro function
    // calls like index(), exist(), scan() that appear as %sysfunc arguments.
    // Commas inside are allowed (they separate the inner function's own args).
    _paren_group: $ => seq(
      "(",
      repeat($._paren_group_item),
      ")",
    ),

    _mc_tok: $ => choice(
      $.string_literal,
      $.numeric_literal,
      $.macro_variable_ref,
      $.macro_call,
      /&=[A-Za-z_][A-Za-z0-9_]*/,  // %put &=var shorthand
      /[^;%()\s"'&]+/,
    ),

    // Subsequent tokens in option-3 content — same as _mc_tok but also allows
    // parenthesized groups for bare SAS calls like n(&panelby) and opt=(...).
    _mc_tok_inner: $ => choice(
      $.string_literal,
      $.numeric_literal,
      $.macro_variable_ref,
      $.macro_call,
      $._paren_group,
      $._bare_pct,                  // bare % not starting a macro call
      /&=[A-Za-z_][A-Za-z0-9_]*/,  // %put &=var shorthand
      /[^;%()\s"'&]+/,
    ),

    // ── %LET ──────────────────────────────────────────────────────────────

    macro_variable_assignment: $ => seq(
      $._pct_let,
      field("name", $._let_name),
      "=",
      optional(field("value", $._macro_value)),
      ";",
    ),

    // Name in %let: identifier, or identifier+&refs, or pure &ref (e.g. %let name&i or %let &&var)
    _let_name: $ => seq(
      choice($.identifier, $.macro_variable_ref),
      repeat($.macro_variable_ref),
    ),

    _macro_value: $ => repeat1(choice(
      $.string_literal,
      $.numeric_literal,
      $.macro_variable_ref,
      $.macro_call,
      /[^;]+/,
    )),

    // ── %INCLUDE ──────────────────────────────────────────────────────────

    include_statement: $ => seq(
      $._pct_include,
      field("source", $.string_literal),
      repeat($._option_token),
      ";",
    ),

    // ── LIBNAME ───────────────────────────────────────────────────────────

    // Everything after libref kept flat — Ix query finds string_literal by position.
    libname_statement: $ => seq(
      kw("LIBNAME"),
      field("libref", $.identifier),
      repeat($._libname_token),
      ";",
    ),

    _libname_token: $ => choice(
      $.string_literal,
      $.macro_variable_ref,
      /[^;\s"'&%]+/,
    ),

    // ── OPTIONS ───────────────────────────────────────────────────────────

    _option_token: $ => choice(
      $.string_literal,
      $.macro_variable_ref,
      /[^;\/\s"'&%]+/,
      /=\s*/,
    ),

    // ── Generic fallback statement ────────────────────────────────────────

    // First token must be non-% to avoid conflict with macro_call_statement.
    // Subsequent tokens may include inline macro_call (e.g. %eval, %if, %sysfunc)
    // so that proc/data statements with embedded macro calls parse cleanly.
    // _bare_pct handles literal % in ODS style attributes (e.g., width=20%).
    generic_statement: $ => seq(
      choice(
        $.string_literal,
        $.numeric_literal,
        $.macro_variable_ref,
        /[^;%\/\s"'&]+/,
        /\//,
      ),
      repeat(choice(
        $.string_literal,
        $.numeric_literal,
        $.macro_variable_ref,
        $.macro_call,
        $._bare_pct,
        /[^;%\/\s"'&]+/,
        /\//,
      )),
      ";",
    ),

    // ── Primitives ────────────────────────────────────────────────────────

    // &var, &&var, &&&var, etc.
    // Each "segment" is an optional dot then an optional identifier — covering:
    //   &var          (no trailing dot)
    //   &var.         (macro separator dot, nothing after)
    //   &var.suffix   (dot + literal text appended to expansion, e.g. &dsname.addCnt)
    //   &&var.name    (double-amp indirect reference with suffix)
    // Using choice(dot+ident, dot) with dot+ident first so the longer form wins.
    macro_variable_ref: $ => token(seq(
      /&+/,
      /[A-Za-z_][A-Za-z0-9_]*/,
      repeat(choice(
        /\.[A-Za-z_][A-Za-z0-9_]*/,
        /\./,
      )),
    )),

    identifier: $ => /[A-Za-z_][A-Za-z0-9_]*/,

    // Single or double quoted; quote char escaped by doubling.
    // The quoted content is wrapped in token() so that block_comment extras
    // cannot fire inside a string — without token(), a string like
    // '/*code-block-start##*/' would let the block_comment extra match the
    // /*...*/ span and consume subsequent source lines as part of the comment.
    // %" inside double-quoted strings is a SAS macro-quoting form that produces
    // a literal " character; list it first so the embedded " does not prematurely
    // close the token.  Single-quoted strings have no such form — '' is the only
    // escape — so %' is NOT listed; otherwise '''%' would greedily consume the
    // closing ' as part of the %' sequence and fail to tokenize.
    string_literal: $ => choice(
      seq(token(seq("'", repeat(choice(/[^']+/, "''")), "'")), optional($._string_suffix)),
      seq(token(seq('"', repeat(choice(/%"/, /[^"]+/, '""')), '"')), optional($._string_suffix)),
    ),

    // Typed constant suffix — must immediately follow closing quote (no space):
    // b=bit, d=date, dt=datetime, n=name-literal, t=time, x=hex-char
    _string_suffix: $ => token.immediate(/[BbDdNnTtXx][Tt]?/),

    // Decimal, scientific, or SAS hex numeric.
    // prec(1) ensures numeric_literal wins over equal-length catch-all regexes
    // (e.g. /[^;%()\s"'&]+/) when both match the same text like "42" or "3.14".
    numeric_literal: $ => token(prec(1, choice(
      /[0-9]+(\.[0-9]*)?([eE][+-]?[0-9]+)?/,
      /\.[0-9]+([eE][+-]?[0-9]+)?/,
      /[0-9A-Fa-f]+[Xx]/,
    ))),
  },
});
