test/corpus/data_step.txt
==================
Simple data step
==================

data mydata;
run;

---

(program
  (data_step
    (data_step_header
      (dataset_name
        (identifier)))
    (run_statement)))

==================
Data step with body
==================

data work.scores;
  set mylib.raw;
run;

---

(program
  (data_step
    (data_step_header
      (dataset_name
        (identifier)
        (identifier)))
    (set_statement
      (dataset_name
        (identifier)
        (identifier)))
    (run_statement)))

==================
Data step null output
==================

data _null_;
run;

---

(program
  (data_step
    (data_step_header
      (dataset_name
        (identifier)))
    (run_statement)))

==================
Data step multiple outputs
==================

data out1 out2;
run;

---

(program
  (data_step
    (data_step_header
      (dataset_name
        (identifier))
      (dataset_name
        (identifier)))
    (run_statement)))

==================
Data step with macro variable assignment in body
==================

data mydata;
  %let n = 10;
run;

---

(program
  (data_step
    (data_step_header
      (dataset_name
        (identifier)))
    (macro_variable_assignment
      name: (identifier)
      value: (numeric_literal))
    (run_statement)))

==================
SET multiple datasets
==================

data work.combined;
  set lib.part1 lib.part2;
run;

---

(program
  (data_step
    (data_step_header
      (dataset_name
        (identifier)
        (identifier)))
    (set_statement
      (dataset_name
        (identifier)
        (identifier))
      (dataset_name
        (identifier)
        (identifier)))
    (run_statement)))

==================
SET with macro variable dataset name
==================

data work.result;
  set &libref..&dsname.;
run;

---

(program
  (data_step
    (data_step_header
      (dataset_name
        (identifier)
        (identifier)))
    (set_statement
      (dataset_name
        (macro_variable_ref)
        (macro_variable_ref)))
    (run_statement)))

==================
SET with dataset options
==================

data work.subset;
  set lib.source (where=(status = 'A'));
run;

---

(program
  (data_step
    (data_step_header
      (dataset_name
        (identifier)
        (identifier)))
    (set_statement
      (dataset_name
        (identifier)
        (identifier))
      (ds_options
        (string_literal)))
    (run_statement)))

==================
MERGE two datasets
==================

data work.merged;
  merge lib.master lib.trans;
  by id;
run;

---

(program
  (data_step
    (data_step_header
      (dataset_name
        (identifier)
        (identifier)))
    (merge_statement
      (dataset_name
        (identifier)
        (identifier))
      (dataset_name
        (identifier)
        (identifier)))
    (generic_statement)
    (run_statement)))

==================
MERGE with in= dataset options
==================

data work.merged;
  merge lib.master (in=m) lib.trans (in=t);
  by id;
run;

---

(program
  (data_step
    (data_step_header
      (dataset_name
        (identifier)
        (identifier)))
    (merge_statement
      (dataset_name
        (identifier)
        (identifier))
      (ds_options)
      (dataset_name
        (identifier)
        (identifier))
      (ds_options))
    (generic_statement)
    (run_statement)))

==================
UPDATE statement
==================

data lib.master;
  update lib.master lib.trans;
  by id;
run;

---

(program
  (data_step
    (data_step_header
      (dataset_name
        (identifier)
        (identifier)))
    (update_statement
      (dataset_name
        (identifier)
        (identifier))
      (dataset_name
        (identifier)
        (identifier)))
    (generic_statement)
    (run_statement)))

==================
OUTPUT bare
==================

data work.out;
  set lib.source;
  output;
run;

---

(program
  (data_step
    (data_step_header
      (dataset_name
        (identifier)
        (identifier)))
    (set_statement
      (dataset_name
        (identifier)
        (identifier)))
    (output_statement)
    (run_statement)))

==================
OUTPUT to named datasets
==================

data work.a work.b;
  set lib.source;
  output work.a;
  output work.b;
run;

---

(program
  (data_step
    (data_step_header
      (dataset_name
        (identifier)
        (identifier))
      (dataset_name
        (identifier)
        (identifier)))
    (set_statement
      (dataset_name
        (identifier)
        (identifier)))
    (output_statement
      (dataset_name
        (identifier)
        (identifier)))
    (output_statement
      (dataset_name
        (identifier)
        (identifier)))
    (run_statement)))

==================
SET and MERGE in same DATA step
==================

data work.final;
  set lib.base;
  merge lib.lookup (in=l);
  by key;
run;

---

(program
  (data_step
    (data_step_header
      (dataset_name
        (identifier)
        (identifier)))
    (set_statement
      (dataset_name
        (identifier)
        (identifier)))
    (merge_statement
      (dataset_name
        (identifier)
        (identifier))
      (ds_options))
    (generic_statement)
    (run_statement)))
