test/corpus/macros.txt
==================
Macro definition no parameters
==================

%macro setup;
  %let env = prod;
%mend setup;

---

(program
  (macro_definition
    name: (macro_name
      (identifier))
    (macro_variable_assignment
      name: (identifier))
    (macro_end
      (macro_name
        (identifier)))))

==================
Macro definition with parameters
==================

%macro greet(name, title);
%mend greet;

---

(program
  (macro_definition
    name: (macro_name
      (identifier))
    (macro_parameters
      (identifier)
      (identifier))
    (macro_end
      (macro_name
        (identifier)))))

==================
Macro definition with default parameter
==================

%macro greet(name, greeting=Hello);
%mend;

---

(program
  (macro_definition
    name: (macro_name
      (identifier))
    (macro_parameters
      (identifier)
      (identifier))
    (macro_end)))

==================
Macro definition with macro call default parameter
==================

%macro foo(a, b = %sysfunc(pathname(work)));
%mend foo;

---

(program
  (macro_definition
    name: (macro_name
      (identifier))
    (macro_parameters
      (identifier)
      (identifier)
      (macro_call
        name: (macro_name)
        (macro_arguments)))
    (macro_end
      (macro_name
        (identifier)))))

==================
Macro definition with block comments in parameter list
==================

%macro loadPackage(
  packageName                         /* name of a package */
, path = %sysfunc(pathname(packages)) /* location of a package */
);
%mend loadPackage;

---

(program
  (macro_definition
    name: (macro_name
      (identifier))
    (macro_parameters
      (identifier)
      (block_comment)
      (identifier)
      (macro_call
        name: (macro_name)
        (macro_arguments))
      (block_comment))
    (macro_end
      (macro_name
        (identifier)))))

==================
Macro definition with single option keyword
==================

%macro foo() / secure;
%mend foo;

---

(program
  (macro_definition
    name: (macro_name
      (identifier))
    (macro_parameters)
    (macro_options
      (identifier))
    (macro_end
      (macro_name
        (identifier)))))

==================
Macro definition with multiple option keywords
==================

%MACRO SQL() / PARMBUFF SECURE;
%mend SQL;

---

(program
  (macro_definition
    name: (macro_name
      (identifier))
    (macro_parameters)
    (macro_options
      (identifier)
      (identifier))
    (macro_end
      (macro_name
        (identifier)))))

==================
Macro definition with des= option and multiline params
==================

%macro listPackages(
  listDataSet
, quiet = 0
)/secure parmbuff
des = 'Macro to list SAS packages.'
;
%mend listPackages;

---

(program
  (macro_definition
    name: (macro_name
      (identifier))
    (macro_parameters
      (identifier)
      (identifier)
      (numeric_literal))
    (macro_options
      (identifier)
      (identifier)
      (identifier)
      (string_literal))
    (macro_end
      (macro_name
        (identifier)))))

==================
Macro definition with options split across lines
==================

%macro bundlePackages(
)/
des='Macro to create a bundle.'
seor
;
%mend bundlePackages;

---

(program
  (macro_definition
    name: (macro_name
      (identifier))
    (macro_parameters)
    (macro_options
      (identifier)
      (string_literal)
      (identifier))
    (macro_end
      (macro_name
        (identifier)))))

==================
Macro definition with options immediately after closing paren
==================

%macro SPFint_gnPckg_arch()/secure minoperator
des='Internal macro.';
%mend SPFint_gnPckg_arch;

---

(program
  (macro_definition
    name: (macro_name
      (identifier))
    (macro_parameters)
    (macro_options
      (identifier)
      (identifier)
      (identifier)
      (string_literal))
    (macro_end
      (macro_name
        (identifier)))))

==================
Macro call no arguments
==================

%setup;

---

(program
  (macro_call_statement
    name: (macro_name)))

==================
Macro call with arguments
==================

%greet(World, Hi);

---

(program
  (macro_call_statement
    name: (macro_name)
    (macro_arguments)))

==================
Macro variable assignment
==================

%let myvar = hello world;

---

(program
  (macro_variable_assignment
    name: (identifier)))

==================
Macro variable assignment empty value
==================

%let myvar = ;

---

(program
  (macro_variable_assignment
    name: (identifier)))

==================
Include statement
==================

%include 'myfile.sas';

---

(program
  (include_statement
    source: (string_literal)))

==================
Include statement fileref with member
==================

%include PROGRMS(IQI_HOSP_FORMATS.SAS);

---

(program
  (include_statement
    source: (fileref_source)))

==================
Include statement fileref without member
==================

%include MacLib;

---

(program
  (include_statement
    source: (fileref_source)))

==================
Macro variable reference
==================

%let path = &base_path/data;

---

(program
  (macro_variable_assignment
    name: (identifier)))

==================
Percent comment
==================

%* this is a macro comment;

---

(program
  (percent_comment))

==================
Percent comment is an extra
==================

libname a '/p';
%* comment between statements;
libname b '/q';

---

(program
  (libname_statement
    libref: (identifier)
    (string_literal))
  (percent_comment)
  (libname_statement
    libref: (identifier)
    (string_literal)))

==================
Macro put statement
==================

%put hello &name.;

---

(program
  (macro_call_statement
    name: (macro_name)
    (macro_variable_ref)))

==================
Macro do loop header
==================

%do i = 1 %to &n.;
%end;

---

(program
  (macro_do_statement
    (numeric_literal)
    (macro_call
      name: (macro_name))
    (macro_variable_ref)))

==================
Macro if then do
==================

%if &x = 1 %then %do;
%end;

---

(program
  (macro_if_statement
    (macro_variable_ref)
    (numeric_literal)
    (macro_do_statement)))

==================
Macro global statement
==================

%global myvar;

---

(program
  (macro_call_statement
    name: (macro_name)))

==================
Macro global multiple variables
==================

%global a b c;

---

(program
  (macro_call_statement
    name: (macro_name)))

==================
Numeric literal integer
==================

%let n = 42;

---

(program
  (macro_variable_assignment
    name: (identifier)
    value: (numeric_literal)))

==================
Numeric literal float
==================

%let x = 3.14;

---

(program
  (macro_variable_assignment
    name: (identifier)
    value: (numeric_literal)))

==================
Numeric literal hex
==================

%let h = 1A2Bx;

---

(program
  (macro_variable_assignment
    name: (identifier)
    value: (numeric_literal)))

==================
Macro if then statement
==================

%if &debug = 1 %then %put debug mode;

---

(program
  (macro_if_statement
    (macro_variable_ref)
    (numeric_literal)
    (macro_call_statement
      name: (macro_name))))

==================
Macro if then else
==================

%if &x > 0 %then %let result = pos;
%else %let result = neg;

---

(program
  (macro_if_statement
    (macro_variable_ref)
    (numeric_literal)
    (macro_variable_assignment
      name: (identifier))
    (macro_variable_assignment
      name: (identifier))))

==================
Macro if then do block
==================

%if &cond = 1 %then %do;
  %let msg = yes;
%end;

---

(program
  (macro_if_statement
    (macro_variable_ref)
    (numeric_literal)
    (macro_do_statement
      (macro_variable_assignment
        name: (identifier)))))

==================
Macro do loop
==================

%do i = 1 %to 10;
  %put &i.;
%end;

---

(program
  (macro_do_statement
    (numeric_literal)
    (macro_call
      name: (macro_name))
    (numeric_literal)
    (macro_call_statement
      name: (macro_name)
      (macro_variable_ref))))

==================
Macro do while loop
==================

%do %while(&i < 10);
  %let i = %eval(&i + 1);
%end;

---

(program
  (macro_do_statement
    (macro_call
      name: (macro_name)
      (macro_arguments
        (macro_variable_ref)
        (numeric_literal)))
    (macro_variable_assignment
      name: (identifier))))

==================
Nested macro if
==================

%if &a = 1 %then %do;
  %if &b = 2 %then %put nested;
%end;

---

(program
  (macro_if_statement
    (macro_variable_ref)
    (numeric_literal)
    (macro_do_statement
      (macro_if_statement
        (macro_variable_ref)
        (numeric_literal)
        (macro_call_statement
          name: (macro_name))))))

==================
Macro body paren expression no semicolon
==================

%macro mdx1(fmt);
 ((put(DX1,&fmt.) = '1'))
%mend;

---

(program
  (macro_definition
    name: (macro_name (identifier))
    (macro_parameters (identifier))
    (numeric_literal)
    (numeric_literal)
    (macro_variable_ref)
    (string_literal)
    (macro_end)))

==================
Macro body percent-do inside parens
==================

%macro mdx(fmt);
 (%do i = 1 %to &ndx.-1;
  (put(DX&i.,&fmt.) = '1') or
  %end;
  (put(DX&ndx.,&fmt.) = '1'))
%mend;

---

(program
  (macro_definition
    name: (macro_name (identifier))
    (macro_parameters (identifier))
    (macro_do_statement
      (numeric_literal)
      (macro_call name: (macro_name))
      (macro_variable_ref)
      (numeric_literal)
      (macro_variable_ref)
      (macro_variable_ref)
      (string_literal))
    (numeric_literal)
    (macro_variable_ref)
    (macro_variable_ref)
    (string_literal)
    (macro_end)))

==================
Macro body ending without semicolon
==================

%macro mdx2q2(fmt);
 result = 0;
 if result = 1
%mend;

---

(program
  (macro_definition
    name: (macro_name (identifier))
    (macro_parameters (identifier))
    (generic_statement
      (numeric_literal))
    (numeric_literal)
    (macro_end)))
